chore: update browser tab title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fernando Service Area — City Checker</title>
+    <title>1A Home Energy Service Area — City Checker</title>
     <!-- Tailwind CDN for styling without build-time config -->
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
