chore: update share preview meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="1A Home Energy Service Area — City Checker" />
+<meta property="twitter:title" content="1A Home Energy Service Area — City Checker" />
+<meta name="description" content="Check if a Massachusetts city is covered by the 1A Home Energy service area." />
+<meta property="og:description" content="Check if a Massachusetts city is covered by the 1A Home Energy service area." />
+<meta property="twitter:description" content="Check if a Massachusetts city is covered by the 1A Home Energy service area." />
+<meta property="og:type" content="website" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1A Home Energy Service Area — City Checker</title>
